<resources>
    <string name="app_name">GoodHabits</string>
    <string name="main_screen_title">GoodHabits</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="all_habits">All Habits</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="done">Done</string>
    <string name="habit_name">Habit Name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="what_type_of_habit">What type of Habit?</string>
    <string name="good_habit">Good Habit</string>
    <string name="bad_habit">Bad Habit</string>
    <string name="assign_a_message">Assign a message</string>
    <string name="this_message_will_act_as_a_reminder">This message will act as a reminder</string>
    <string name="select_time">Select Time</string>
    <string name="open_time_picker">Open Time Picker</string>
    <string name="submit">Submit</string>
    <string name="enter_the_habit_name">Enter the Habit name</string>
    <string name="habit_type">Habit Type</string>
    <string name="enter_a_message_related_to_this_habit">Enter a message related to this habit</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="total_habits">Total Habits:</string>
    <string name="count">Count</string>
    <string name="dashboard">Dashboard</string>
    <string name="message">Message</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="days_passed">Days Passed</string>
    <string name="checkins">Checkins</string>
    <string name="notification_time">Notification Time</string>
    <string name="check_in">Check In</string>
    <string name="days_checked_in">Days Checked In</string>
    <string name="_0">0</string>
    <string name="_66">66</string>
    <string name="change_time">Change time</string>
    <string name="quote">Quote</string>
    <string name="show_quotes_on_home_screen">Show quotes on home screen</string>
    <string name="rating">Rating</string>
    <string name="good_habits">Good Habits</string>
    <string name="bad_habits">Bad Habits</string>
</resources>
