<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="comp3350.goodhabits.Presentation.HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_screen_title_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/main_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/main_screen_title"
            android:textColor="#009688"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="14dp" />

        <ImageButton
            android:id="@+id/user_profile_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_margin="15dp"
            android:adjustViewBounds="true"
            android:background="#FFFFFF"
            android:contentDescription="@string/profile"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:tint="#009688"
            app:srcCompat="@drawable/user_profile"
            tools:layout_editor_absoluteX="415dp"
            tools:layout_editor_absoluteY="10dp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/dash_board"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_screen_title_bar">

        <TextView
            android:id="@+id/quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/quote"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/rating_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/dashboard"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/h_count_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/h_count_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:text="@string/total_habits"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/h_count_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:text="@string/count"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gh_count_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gh_count_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:text="@string/good_habits"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/gh_count_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:text="@string/count"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bh_count_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bh_count_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:text="@string/bad_habits"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/bh_count_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:text="@string/count"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_bar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="45dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="#FFFFFF"
            android:contentDescription="@string/settings"
            android:scaleType="fitCenter"
            android:tint="#009688"
            app:srcCompat="@drawable/settings" />

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="45dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="#FFFFFF"
            android:contentDescription="@string/add"
            android:scaleType="fitCenter"
            android:tint="#009688"
            app:srcCompat="@drawable/add" />

        <ImageButton
            android:id="@+id/all_habits_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="45dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="#FFFFFF"
            android:contentDescription="@string/all_habits"
            android:scaleType="fitCenter"
            android:tint="#009688"
            app:srcCompat="@drawable/all_habits" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
